--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+    
 
 
     <!-- ============ Main CSS ============ -->
+    <link rel="shortcut icon" href="content/images/adidas.ico" type="image/ico" >
     <link rel="stylesheet" href="content/css/app.css">
     <style type="text/css">
         #keyword {
