--- a/index-blue.html
+++ b/index-blue.html
@@ -23,6 +23,7 @@
 
 
     <!-- ============ Main CSS ============ -->
+    <link rel="shortcut icon" href="content/images/adidas.ico" type="image/ico" >
     <link rel="stylesheet" href="content/css/app.css">
     <style type="text/css">
         #keyword {
